--- a/pixel-draw/package.json
+++ b/pixel-draw/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pixel-draw",
+  "homepage": "https://Yanny24211.github.io/pixel-draw",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,9 +8,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "html2canvas": "^1.4.1",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
